Thu May 21 17:44:53 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: fix issues caused by binding created from Method#to_proc.
	  [Bug #11163]

	* vm.c (vm_cref_new_toplevel): export as rb_vm_cref_new_toplevel().

	* test/ruby/test_method.rb: add some assersions.

Thu May 21 17:29:26 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/matrix.rb: added documentation for Matrix#empty and Matrix#/
	  [Feature #10070][ruby-dev:48433] Patch by @gogotanaka

Thu May 21 17:02:43 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: rename functions.
	  * method_get_def() -> method_def()
	  * method_get_iseq() -> method_def_iseq()
	  * method_get_cref() -> method_cref()

Thu May 21 16:52:44 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_method_get_iseq): rename to rb_method_iseq.

	* iseq.c: catch up this fix.

	* iseq.h: commit ditto.

Thu May 21 15:41:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/telnet.rb: gemify net-telnet.
	  [Feature #11083]
	* gems/bundled_gems: added net-telnet to bundled gems.

Thu May 21 15:37:32 2015  Zachary Scott  <e@zzak.io>

        * vm_method.c: Remove private attribute warning [Bug #10967]
          Patch by @spastorino [Fixes GH-849]
          https://github.com/ruby/ruby/pull/849

        * test/ruby/test_module.rb: Update test for changes

Thu May 21 10:59:43 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (method_proc): rename to method_to_proc.

Thu May 21 10:51:54 2015  Jake Worth  <jakeworth82@gmail.com>

	* io.c (rb_f_select): [DOC] Fixes for grammar and style.
	  [Fix GH-906]

Thu May 21 08:25:19 2015  Eric Wong  <e@80x24.org>

	* variable.c (Init_var_tables): init generic_iv_tbl
	  (rb_generic_ivar_table, generic_ivar_get, generic_ivar_set,
	   generic_ivar_defined, generic_ivar_remove,
	   rb_mark_generic_ivar, givar_i, rb_mark_generic_ivar_tbl,
	   rb_free_generic_ivar, rb_copy_generic_ivar, rb_ivar_foreach,
	   rb_ivar_count): remove checks for uninitialize generic_iv_tbl
	[ruby-core:69155] [Feature #11146]
