@@ -34,8 +34,8 @@ VALUE rb_iseq_line_trace_all(VALUE iseqval);
 VALUE rb_iseq_line_trace_specify(VALUE iseqval, VALUE pos, VALUE set);
 
 /* proc.c */
-rb_iseq_t *rb_method_iseq(VALUE body);
-rb_iseq_t *rb_proc_get_iseq(VALUE proc, int *is_proc);
+const rb_iseq_t *rb_method_iseq(VALUE body);
+const rb_iseq_t *rb_proc_get_iseq(VALUE proc, int *is_proc);
 
 struct rb_compile_option_struct {
     int inline_const_cache;
