@@ -319,7 +319,7 @@ rb_method_entry_make(VALUE klass, ID mid, rb_method_type_t type,
 	    old_def->alias_count == 0 &&
 	    old_def->type != VM_METHOD_TYPE_UNDEF &&
 	    old_def->type != VM_METHOD_TYPE_ZSUPER) {
-	    rb_iseq_t *iseq = 0;
+	    const rb_iseq_t *iseq = 0;
 
 	    rb_warning("method redefined; discarding old %"PRIsVALUE, rb_id2str(mid));
 	    switch (old_def->type) {
